--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
-div, section, p, img, h1, h2, h3 {
-  margin:0;
+div, section, p, img, h1, h2, h3, h4 {
+  margin: 0;
+  padding: 0;
 } 
 .page {
   min-width: 1100px;
@@ -7,6 +8,8 @@ div, section, p, img, h1, h2, h3 {
   margin: 0 auto;
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
+
+/*HEADER*/
 .header {
   height: 100vh;
   min-height: 600px;
@@ -21,26 +24,24 @@ div, section, p, img, h1, h2, h3 {
   background-image: url(../images/logo_place_header.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: content;
+  background-size: contain;
 }
 .logo_place_header {
   position: absolute;
   width: 183px;
   height: 32px;
-  order:1;
+  order: 1;
   left: 64px;
   top: 30px;
 }
 .header__title {
-  position: relative;
+  align-self: center;
   width: 730px;
-  left: 64px;
-  display: inline-block;
+  margin-left: 64px;
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
-  margin-top: auto;
-  margin-bottom: auto;
+  z-index: 2;
 }
 .header__subtitle {
   position: absolute;
@@ -50,6 +51,7 @@ div, section, p, img, h1, h2, h3 {
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  z-index: 3;
 }
  .header__main-illustration {
  position: absolute;
@@ -67,10 +69,9 @@ div, section, p, img, h1, h2, h3 {
   right: 0;
   background-color: #2f80ed;
 }
-.description {
-  margin-top: 100px;
-  margin-bottom: 100px;
-}
+/*HEADER*/
+
+/*DESCRIPTION*/
 .description p {
   margin-top: 0;
 }
@@ -80,9 +81,7 @@ div, section, p, img, h1, h2, h3 {
   justify-content: space-between;
   position: relative;
   width: 80%; 
-  margin-left: auto;
-  margin-right: auto;
-  
+  margin: 100px auto 100px auto;
 }
 .two-columns__brief {
   flex-basis: 175px;
@@ -90,12 +89,11 @@ div, section, p, img, h1, h2, h3 {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin-top: 0;
 }
 .two-columns__main-text{
   display: flex;
   flex-direction: column;
-  justify-content:space-between;
+  justify-content: space-between;
   flex-basis: 80%;
   min-width: 784px
 }
@@ -111,20 +109,19 @@ div, section, p, img, h1, h2, h3 {
   font-size: 24px;
   font-weight: 600;
 }
+/*DESCRIPTION*/
+
+/*DIGITS*/
 .digits {
-  margin-top: 100px;
-  margin-bottom: 100px;
   position: relative;
-  }
+}
 .digits__table {
   margin-left: auto;
   margin-right: auto;
   }
 .section-title {
   width: 60%;
-  margin-bottom: 20px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 100px auto 20px auto;
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
@@ -145,27 +142,29 @@ div, section, p, img, h1, h2, h3 {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  position: relative;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
 }
 .table__cell {
   width: 250px;
-  margin-top: 60px;
+  padding-top: 60px;
 }
 .table__heading {
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
-  margin-bottom: 20px;
   margin-top: 0;
 }
 .table__text {
-  line-height: 1.2;
   font-size: 18px;
+  line-height: 1.2;
   font-weight: normal;
   padding-top: 20px;
 }
+/*DIGITS*/
+
+/*FEYNMAN*/
 .feynman {
   height: 890px;
   background-color: #f2f2f2;
@@ -176,31 +175,35 @@ div, section, p, img, h1, h2, h3 {
   position: relative;
 }
 .feynman__title {
-width: 648px;
-text-align: center;
-line-height: 1.15;
-font-size: 120px;
-font-weight: 600;
-margin-bottom: 70px;
-margin-left:auto;
-margin-right:auto;
-padding-top: 100px;
+ width: 648px;
+ text-align: center;
+ line-height: 1.15;
+ font-size: 120px;
+ font-weight: 600;
+ margin-bottom: 70px;
+ margin-left: auto;
+ margin-right: auto;
+ padding-top: 100px;
 }
 .feynman__subtitle {
-margin: 0 auto;
-text-align: center;
-line-height: 51px;
-font-size: 36px;
-font-weight: normal;
+ margin-left: auto;
+ margin-right: auto;
+ text-align: center;
+ line-height: 51px;
+ font-size: 36px;
+ font-weight: normal;
 }
 .feynman__link {
-position: absolute;
-top: 50%;
-right: 48px;
-line-height: 51px;
-font-size: 36px;
-font-weight: normal;
+ position: absolute;
+ top: 50%;
+ right: 48px;
+ line-height: 51px;
+ font-size: 36px;
+ font-weight: normal;
 }
+/*FEYNMAN*/
+
+/*KAUFMAN*/
 .kaufman {
  overflow: hidden;
  background-color: #1f1f1f;
@@ -213,13 +216,13 @@ font-weight: normal;
   height: 877px;
   background-repeat: no-repeat;
   position: absolute;
-  right:-210px;
+  right: -210px;
+  top: 0;
  }
 .section-title_theme_dark {
- color: white;
+ color: #FFF;
  width: 60%;
  margin-top: 90px;
- margin-bottom: 20px;
  line-height: 1.15;
  font-size: 60px;
  font-weight: 600;
@@ -228,7 +231,7 @@ font-weight: normal;
  text-align: center;
 }
 .section-subtitle_theme_dark {
- color: white;
+ color: #FFF;
  width: 60%;
  line-height: 34px;
  font-size: 24px;
@@ -236,10 +239,10 @@ font-weight: normal;
  text-align: center;
  margin-left: auto;
  margin-right: auto;
+ margin-top: 20px;
 }
 .table_theme_dark {
-  color: white;
-  z-index: 1;
+  color: #FFF;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 90px;
@@ -247,6 +250,7 @@ font-weight: normal;
 .table__cell_theme_dark {
   width: 200px;
   margin-top: 80px;
+  z-index: 99999999;
 }
 .table__heading_theme_dark {
   line-height: 1.15;
@@ -260,40 +264,39 @@ font-weight: normal;
   font-size: 18px;
   font-weight: normal;
 }
+/*KAUFMAN*/
+
+/*FOOTER*/
 .footer {
   min-height: 350px;
   background-color: #1f1f1f;
-  padding-top: 60px;
-  padding-bottom: 40px;
+  display: flex;
+  color: #FFF;
 }
 .footer__columns {
   width: 90%;
-  margin-right: 0;
-  margin-left: 0;
-  color: white;
-  position: relative;
+  margin: 60px auto 40px;
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 }
 .footer__columns_content_copyright {
 flex-basis: 711px;
 flex-shrink: 1;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
 }
 .logo_place_footer {
 width: 183px;
 height: 35px;
-left: 64px;
-position: absolute;
 background-image: url(../images/logo_place_footer.svg);
 }
 .footer__author {
-  margin-top: 18px;
-  margin-bottom: 18px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  position: absolute;
+  margin-top: 18px;
+  margin-bottom: 18px;
 }
 .footer__columns_content_info {
   margin-left: auto;
@@ -307,6 +310,10 @@ background-image: url(../images/logo_place_footer.svg);
   font-size: 18px;
   font-weight: 600;
 }
+ul {
+  padding-left: 0;
+  margin-left: 0;
+}
 .footer__column-links {
   margin-bottom: 16px;
   line-height: 30px;
@@ -315,11 +322,11 @@ background-image: url(../images/logo_place_footer.svg);
   list-style-type: none;
 }
 .footer__column-links a:link {
-  color: white;
+  color: #FFF;
   text-decoration: none;
 }
 .footer__column-links a:visited {
-  color: white;
+  color: #FFF;
   text-decoration: none;
 }
 .footer__columns_content_social {
@@ -328,23 +335,16 @@ background-image: url(../images/logo_place_footer.svg);
   flex-shrink: 2;
 }
 .footer__content-social a:link {
-  color: white;
+  color: #FFF;
   text-decoration: none;
 }
 .footer__content-social a:visited {
-  color: white;
+  color: #FFF;
   text-decoration: none;
 }
 .footer__social-icon {
-  margin-bottom: 16px;
   width: 16px;
   height: 16px;
-  background-size: contain;
-  position: relative;
-  padding-right: 10px;
+  margin-right: 10px;
 }
-ul {
-  padding-left: 0;
-  margin-left: 0;
-}
-
+/*FOOTER*/
