--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,8 @@
-div, section, p, img, h1, h2, h3, h4 {
+div, section, p, img, ul, h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
 } 
+
 .page {
   min-width: 1100px;
   max-width: 1600px;
@@ -18,14 +19,15 @@ div, section, p, img, h1, h2, h3, h4 {
   display: flex;
   position: relative;
   overflow: hidden;
-  margin-bottom: 100px;
 }
+
 .logo {
   background-image: url(../images/logo_place_header.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
 }
+
 .logo_place_header {
   position: absolute;
   width: 183px;
@@ -34,15 +36,17 @@ div, section, p, img, h1, h2, h3, h4 {
   left: 64px;
   top: 30px;
 }
+
 .header__title {
   align-self: center;
-  width: 730px;
+  max-width: 730px;
   margin-left: 64px;
   line-height: 96px;
   font-size: 102px;
-  font-weight: 600;
+  font-weight: 700;
   z-index: 2;
 }
+
 .header__subtitle {
   position: absolute;
   width: 388px;
@@ -53,6 +57,12 @@ div, section, p, img, h1, h2, h3, h4 {
   font-weight: normal;
   z-index: 3;
 }
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
  .header__main-illustration {
  position: absolute;
  height: 608px;
@@ -61,6 +71,7 @@ div, section, p, img, h1, h2, h3, h4 {
  bottom: 0;
  z-index: 1;
 }
+
 .header__square-pic {
   position: absolute;
   height: 568px;
@@ -72,24 +83,28 @@ div, section, p, img, h1, h2, h3, h4 {
 /*HEADER*/
 
 /*DESCRIPTION*/
-.description p {
-  margin-top: 0;
+.description {
+  margin: 100px auto 0 auto;
 }
+
 .two-columns {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   position: relative;
   width: 80%;
-  margin: 100px auto 100px auto;
+  margin: auto;
 }
+
 .two-columns__brief {
   flex-basis: 175px;
   color: #2f80ed;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
+
 .two-columns__main-text{
   display: flex;
   flex-direction: column;
@@ -97,34 +112,39 @@ div, section, p, img, h1, h2, h3, h4 {
   flex-basis: 80%;
   min-width: 784px;
 }
+
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
+}
+
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 700;
 }
 /*DESCRIPTION*/
 
 /*DIGITS*/
+.digits {
+  margin: 100px auto 100px;
+}
 
-.digits__table {
-  margin-left: auto;
-  margin-right: auto;
-  }
 .section-title {
   width: 60%;
-  margin: 100px auto 20px auto;
+  margin: 0 auto 20px auto;
   line-height: 1.15;
   font-size: 60px;
-  font-weight: 600;
+  font-weight: 700;
   text-align: center;
 }
+
 .section-subtitle {
   width: 60%;
   margin-left: auto;
@@ -134,6 +154,7 @@ div, section, p, img, h1, h2, h3, h4 {
   font-weight: normal;
   text-align: center;
 }
+
 .table {
   width: 1100px;
   display: flex;
@@ -142,29 +163,37 @@ div, section, p, img, h1, h2, h3, h4 {
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 100px;
 }
+
 .table__cell {
   width: 250px;
-  padding-top: 60px;
+  margin-top: 60px;
+  list-style-type: none;
+  margin-top: 60px;
 }
+
 .table__heading {
   line-height: 1.15;
   font-size: 24px;
-  font-weight: 600;
-  margin-top: 0;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
+
 .table__text {
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
-  padding-top: 20px;
+  margin-bottom: 20px;
+}
+
+.table__text :last-child {
+  margin-bottom: 0;
 }
 /*DIGITS*/
 
 /*FEYNMAN*/
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-position: bottom left;
@@ -172,17 +201,19 @@ div, section, p, img, h1, h2, h3, h4 {
   background-size: 867px 637px;
   position: relative;
 }
+
 .feynman__title {
  width: 648px;
  text-align: center;
  line-height: 1.15;
  font-size: 120px;
- font-weight: 600;
+ font-weight: 700;
  margin-bottom: 70px;
  margin-left: auto;
  margin-right: auto;
  padding-top: 100px;
 }
+
 .feynman__subtitle {
  margin-left: auto;
  margin-right: auto;
@@ -191,6 +222,7 @@ div, section, p, img, h1, h2, h3, h4 {
  font-size: 36px;
  font-weight: normal;
 }
+
 .feynman__link {
  position: absolute;
  top: 50%;
@@ -198,6 +230,8 @@ div, section, p, img, h1, h2, h3, h4 {
  line-height: 51px;
  font-size: 36px;
  font-weight: normal;
+ text-decoration: none;
+ color: #2f80ed;
 }
 /*FEYNMAN*/
 
@@ -206,7 +240,10 @@ div, section, p, img, h1, h2, h3, h4 {
  overflow: hidden;
  background-color: #1f1f1f;
  position: relative;
+ padding-top: 90px;
+ padding-bottom: 90px;
 }
+
 .kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
   background-size: contain;
@@ -217,17 +254,18 @@ div, section, p, img, h1, h2, h3, h4 {
   right: -210px;
   top: 0;
  }
+
 .section-title_theme_dark {
  color: #FFF;
  width: 60%;
- margin-top: 90px;
  line-height: 1.15;
  font-size: 60px;
- font-weight: 600;
+ font-weight: 700;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
 }
+
 .section-subtitle_theme_dark {
  color: #FFF;
  width: 60%;
@@ -235,32 +273,29 @@ div, section, p, img, h1, h2, h3, h4 {
  font-size: 24px;
  font-weight: normal;
  text-align: center;
- margin-left: auto;
- margin-right: auto;
- margin-top: 20px;
 }
+
 .table_theme_dark {
   color: #FFF;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 90px;
 }
+
 .table__cell_theme_dark {
   width: 200px;
-  margin-top: 80px;
   z-index: 99999999;
+  margin-top: 80px;
 }
+
 .table__heading_theme_dark {
   line-height: 1.15;
   font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 20px;
-  margin-top: 0;
+  font-weight: 700;
 }
+
 .table__text_theme_dark {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin-bottom: 0;
 }
 /*KAUFMAN*/
 
@@ -270,25 +305,35 @@ div, section, p, img, h1, h2, h3, h4 {
   background-color: #1f1f1f;
   display: flex;
   color: #FFF;
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
+
 .footer__columns {
   width: 90%;
-  margin: 60px auto 40px;
   display: flex;
   justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
 }
-.footer__columns_content_copyright {
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column_content_copyright {
 flex-basis: 711px;
 flex-shrink: 1;
-display: flex;
-flex-direction: column;
 justify-content: space-between;
 }
+
 .logo_place_footer {
 width: 183px;
 height: 35px;
 background-image: url(../images/logo_place_footer.svg);
 }
+
 .footer__author {
   line-height: 25px;
   font-size: 18px;
@@ -296,11 +341,13 @@ background-image: url(../images/logo_place_footer.svg);
   margin-top: 18px;
   margin-bottom: 18px;
 }
-.footer__columns_content_info {
+
+.footer__column_content_info {
   margin-left: auto;
   margin-right: auto;
   flex-shrink: 1.5;
 }
+
 .footer__column-heading {
   margin-bottom: 20px;
   margin-top: 0;
@@ -308,10 +355,7 @@ background-image: url(../images/logo_place_footer.svg);
   font-size: 18px;
   font-weight: 600;
 }
-ul {
-  padding-left: 0;
-  margin-left: 0;
-}
+
 .footer__column-links {
   margin-bottom: 16px;
   line-height: 30px;
@@ -319,27 +363,33 @@ ul {
   font-weight: normal;
   list-style-type: none;
 }
+
 .footer__column-links a:link {
   color: #FFF;
   text-decoration: none;
 }
+
 .footer__column-links a:visited {
   color: #FFF;
   text-decoration: none;
 }
-.footer__columns_content_social {
+
+.footer__column_content_social {
   margin-left: auto;
   margin-right: auto;
   flex-shrink: 2;
 }
+
 .footer__content-social a:link {
   color: #FFF;
   text-decoration: none;
 }
+
 .footer__content-social a:visited {
   color: #FFF;
   text-decoration: none;
 }
+
 .footer__social-icon {
   width: 16px;
   height: 16px;
