--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+@keyframes rotation {
+  from {
+      transform: rotate(0deg);
+  }
+  to {
+      transform: rotate(360deg);
+  }
+} 
 div, section, p, img, ul, h1, h2, h3, h4 {
   margin: 0;
   padding: 0;
@@ -79,6 +87,7 @@ div, section, p, img, ul, h1, h2, h3, h4 {
   top: 64px;
   right: 0;
   background-color: #2f80ed;
+  animation: rotation 20s linear infinite;
 }
 /*HEADER*/
 
@@ -130,6 +139,43 @@ div, section, p, img, ul, h1, h2, h3, h4 {
   font-weight: 700;
 }
 /*DESCRIPTION*/
+
+/*TECHNIQUES*/
+.techniques {
+  margin: 100px auto 0;
+  width: 80px;
+}
+
+.cards {
+  width: 920px;
+  display: grid;
+  
+}
+
+.cards__item {
+  list-style-type: none;
+  margin-left: 100px;
+}
+
+.cards__image {
+  width: 160px;
+  height: 160px;
+  margin: 60px 40px 43px;
+}
+
+.cards__title {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+.cards__description {
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
+}
+/*TECHNIQUES*/
 
 /*DIGITS*/
 .digits {
@@ -252,6 +298,7 @@ div, section, p, img, ul, h1, h2, h3, h4 {
   position: absolute;
   right: -210px;
   top: 0;
+  animation: rotation 20s linear infinite;
  }
 
 .section-title_theme_dark {
