--- a/styles/style.css
+++ b/styles/style.css
@@ -143,24 +143,33 @@ div, section, p, img, ul, h1, h2, h3, h4 {
 /*TECHNIQUES*/
 .techniques {
   margin: 100px auto 0;
-  width: 80px;
+  width: 80%;
 }
 
 .cards {
   width: 920px;
-  display: grid;
-  
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cards__item {
-  list-style-type: none;
-  margin-left: 100px;
+  margin-right: 100px;
+  text-align: center;
+  list-style: none;
+  width: 240px;
+}
+
+.cards__item:nth-of-type(3n) {
+  margin-right: 0;
 }
 
 .cards__image {
   width: 160px;
   height: 160px;
   margin: 60px 40px 43px;
+  border-radius: 50%;
 }
 
 .cards__title {
@@ -176,6 +185,102 @@ div, section, p, img, ul, h1, h2, h3, h4 {
   font-weight: normal;
 }
 /*TECHNIQUES*/
+
+/*VIDEO*/
+.video {
+  margin: 100px auto 0;
+}
+
+.video__iframes {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: 50px;
+}
+
+.video__iframe { 
+  width: 515px;
+  height: 316px;
+  margin-right: 20px;
+}
+
+.video__iframe:nth-of-type(2n) {
+  margin-right: 0;
+}
+/*VIDEO*/
+
+/*OAKLEY*/
+.oakley { 
+background-color: #f2f2f2;
+padding-top: 160px;
+}
+/*OAKLEY*/
+
+/*KHAN*/
+.khan {
+background-color: #f2f2f2;
+}
+
+.khan__container {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.khan__author {
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal; 
+}
+.khan__title {
+  margin-bottom: 50px;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 700; 
+}
+
+.khan__quote {
+  width: 790px;
+  margin-bottom: 36px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal; 
+}
+
+.khan__quote-author {
+  margin-bottom: 10px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700; 
+}
+
+.khan__quote-author-subline {
+  margin-bottom: 68px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal; 
+}
+
+.khan__book-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.khan__book-pic{
+  width: 620px;
+  height: 608px;
+  margin-right: 48px;
+  flex-shrink: 1;
+}
+
+.khan__buy-link {
+  flex-shrink: 1.5;
+  padding-top: 0;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal; 
+}
+/*KHAN*/
 
 /*DIGITS*/
 .digits {
@@ -344,6 +449,25 @@ div, section, p, img, ul, h1, h2, h3, h4 {
   margin-bottom: 0;
 }
 /*KAUFMAN*/
+
+/*RESOURCES*/
+.resources {
+  margin: 100px auto 217px;
+}
+
+.resources__logo-zone {
+  margin-top: 80px;
+  width: 1100px;
+  display: flex;
+  flex-direction: row;
+}
+
+.resources__link {
+  width: 270px;
+  height: 38px;
+  list-style-type: none;
+}
+/*RESOURCES*/
 
 /*FOOTER*/
 .footer {
