--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,6 +2,7 @@
     width: 920px;
     display: flex;
     flex-wrap: wrap;
-    margin-left: auto;
-    margin-right: auto;
+    text-align:center;
+    margin-left:auto;
+    margin-right:auto;
   }
