--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -1,7 +1,10 @@
 .footer__column-links {
-    margin-bottom: 16px;
     line-height: 30px;
     font-size: 18px;
     font-weight: normal;
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0 16px 0;
+    padding: 0;
   }
