--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,10 @@
 .footer {
     min-height: 350px;
     background-color: #1f1f1f;
-    display: flex;
     color: #FFF;
-    padding-top: 60px;
-    padding-bottom: 40px;
+    padding: 60px 0 40px 0;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
   }
   
