--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -1,5 +1,6 @@
 .khan__quote-author-subline {
     margin-bottom: 68px;
+    margin-top: 0;
     line-height: 1.15;
     font-size: 24px;
     font-weight: normal; 
