--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,5 +1,5 @@
 .logo {
-    background-image: url(../images/logo_place_header.svg);
+    background-image: url(../../images/logo/logo_place_header.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
