--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -1,7 +1,6 @@
 .section-subtitle {
     width: 60%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto 0;
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
