--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -1,5 +1,5 @@
 .kaufman__triangle {
-    background-image: url(../images/kaufman-triangle.svg);
+    background-image: url(../../../images/kaufman/kaufman-triangle.svg);
     background-size: contain;
     width: 877px;
     height: 877px;
@@ -7,5 +7,5 @@
     position: absolute;
     right: -210px;
     top: 0;
-    animation: rotation 20s linear infinite;
+    z-index: -1;
    }
