--- a/blocks/two-columns/__paragraph/two-columns__paragraph.css
+++ b/blocks/two-columns/__paragraph/two-columns__paragraph.css
@@ -1,8 +1,11 @@
 .two-columns__paragraph {
+    margin: 0;
+    padding: 0;
     line-height: 34px;
     font-size: 24px;
     font-weight: normal;
     margin-bottom: 30px;
+    margin-top: 0;
   }
 
   .two-columns__paragraph:last-child {
